<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.drhansen000.prove05.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/favorite_scripture" />

    <EditText
        android:id="@+id/book"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/book"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/chapter"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/chapter"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/verse"
        app:layout_constraintStart_toEndOf="@+id/book"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/verse"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/verse"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginTop="120dp"
        android:onClick="sendScripture"
        android:text="@string/submit_scripture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:onClick="loadScripture"
        android:text="@string/load_scripture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>
